--- a/hello_cas.yml
+++ b/hello_cas.yml
@@ -6,7 +6,7 @@
         msg: "Hello Cloud Automation Services!"
         
     - name: Install Apache
-      raw: sudo apt install -y apache2
+      raw: sudo apt-get install apache2 -y
 
     - name: enabled mod_rewrite
       apache2_module: name=rewrite state=present
