--- a/hello_cas.yml
+++ b/hello_cas.yml
@@ -5,4 +5,17 @@
       debug:
         msg: "Hello Cloud Automation Services!"
 
+    - name: Install pip
+      apt: 
+        name=python-pip state=present
       
+    - name: install docker-py
+      pip: 
+        name=docker-py
+        
+    - name: Running the container
+      docker_container:
+        image: web:latest
+        path: docker
+        state: running
+
