--- a/hello_cas.yml
+++ b/hello_cas.yml
@@ -4,6 +4,13 @@
     - name: Hello Message
       debug:
         msg: "Hello Cloud Automation Services!"
+        
+    - name: Update and upgrade apt packages
+      become: true
+      apt:
+        upgrade: yes
+        update_cache: yes 
+        cache_valid_time: 86400 #One day
 
     - name: Install pip
       apt: 
